Revision history for {{$dist->name}}

{{$NEXT}}
 - Add abstract to ::DateMethods1::Announcement (Gregor Herrmann)

2.021001  2014-04-06 11:43:36-05:00 America/Chicago
 - Fix ::RemoveColumns to work with a specified `columns` (Anthony DeRobertis)
   (Fixes GH#27) Also fixes RT#91977/GH#24)

2.021000  2014-04-01 20:12:40-05:00 America/Chicago
 - Create Shortcut::Page and Shortcut::LimitedPage ResultSet helpers (wreis)

2.020001  2014-03-05 10:33:46CST-0600 America/Chicago
 - Make ::DateMethods1 tests paralellizable (thanks Alexander Hartmaier!)
 - fix ::Helper::ResultSet::DateMethods1 for Oracle (thanks Alexander Hartmaier!)
 - fix ABSTRACT on ::Helper::ResultSet::DateMethods1

2.020000  2014-03-04 08:31:39-06:00 America/Chicago
 - Add ::Helper::ResultSet::DateMethods1
 - Add abstract to ::Schema::LintContents

2.019004  2014-02-14 07:53:19 America/Chicago
 - Make IgnoreWantarray's search die in void context

2.019003  2014-02-07 22:21:47-06:00 America/Chicago
 - Fix ->copy on rows with proxied ResultSet methods (thanks moltar for the
   test!) (NOTE: This fix is what requires upgrading to DBIC 0.08260)

2.019002  2014-01-12 09:40:41 America/Chicago
 - Pick SQL for random row selection in a cleaner way
 - Stop using Class::MOP::load_class (RT#91035)
 - Really stop using RT

2.019001  2013-11-23 10:19:28 America/Chicago
 - Fix typo in ::CorrelateRelationship (Getty)

2.019000  2013-10-17 20:36:45 America/Chicago

 - Create clean_rs row shortcut (wreis)
 - Create DateTime schema helper (wreis)

2.018004  2013-10-07 15:23:39 America/Chicago
 - fix dep marked as test but actually runtime

2.018003  2013-09-26 08:06:03 America/Chicago
 - fix method shadowing with some helpers for ::Shortcut
 - ::OrderByMagic now correctly passes through arrayrefs (moltar)
 - ::OrderByMagic only prefixes with CSA when needed (moltar)

2.018002  2013-07-30 18:45:10 CST6CDT
 - ::Helper::ResultSet correctly uses all Helpers (reported by moltar)